# domainstack

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONCEPT.md  CONCEPT.md.backup  CONTRIBUTING.md  COVERAGE.md  DOMAINSTACK_CLI_IMPLEMENTATION.md  IMPACT_ANALYSIS.md  LICENSE-MIT  PUBLISHING.md  README.md  REVIEW.md  REVIEW_SUMMARY.md  ROADMAP.md  TYPESCRIPT_ZOD_IMPLEMENTATION.md  V0.1-IMPLEMENTATION-PLAN.md  V0.2-PLAN.md  V0.3-PLAN.md  codecov.yml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
docs/: BREAKING_CHANGES_ANALYSIS.md  CONCEPT.md  DOMAINSTACK_CLI_IMPLEMENTATION.md  PUBLISHING.md  README-STRATEGY.md  REVIEW.md  RULES.md  RULE_SYSTEM_ANALYSIS.md  SCHEMA_DERIVATION.md  SCHEMA_DERIVATION_IMPLEMENTATION.md  V0.1-IMPLEMENTATION-PLAN.md  V0.2-PLAN.md  V0.3-PLAN.md  V0.4-PLAN.md  api-guide.md  architecture.md  rules.md
domain-model/: Cargo.toml  README.md
domain-model/domain-model/: Cargo.toml  README.md
domain-model/domain-model-derive/: Cargo.toml
domain-model/domain-model-derive/src/: lib.rs
domain-model/domain-model-derive/tests/: basic.rs  collections.rs  custom.rs  nested.rs
domain-model/domain-model-error-envelope/: Cargo.toml
domain-model/domain-model-error-envelope/src/: lib.rs
domain-model/domain-model/examples/: age_primitive.rs  booking_aggregate.rs  email_primitive.rs
domain-model/domain-model/src/: error.rs  helpers.rs  lib.rs
domain-model/domain-model/src/rules/: mod.rs  numeric.rs
domain-model/examples/: Cargo.toml  age_primitive.rs  booking_aggregate.rs  email_primitive.rs  v2_basic.rs  v2_collections.rs  v2_custom.rs  v2_nested.rs  v3_error_envelope_basic.rs  v3_error_envelope_nested.rs
domain-model/src/: error.rs  helpers.rs  lib.rs  prelude.rs  validate.rs  violation.rs
domain-model/src/rules/: string.rs
domainstack/: Cargo.toml  LICENSE  LICENSE-APACHE  README.md
domainstack/domainstack/: Cargo.toml  README.md
domainstack/domainstack-actix/: Cargo.toml  README.md
domainstack/domainstack-actix/src/: lib.rs
domainstack/domainstack-axum/: Cargo.toml  README.md
domainstack/domainstack-axum/src/: lib.rs
domainstack/domainstack-cli/: Cargo.toml  JSON_SCHEMA_CAPABILITIES.md  README.md
domainstack/domainstack-cli/examples/: json_schema_demo.rs
domainstack/domainstack-cli/src/: main.rs
domainstack/domainstack-cli/src/commands/: json_schema.rs  mod.rs  openapi.rs  zod.rs
domainstack/domainstack-cli/src/generators/: json_schema.rs  mod.rs  openapi.rs  zod.rs
domainstack/domainstack-cli/src/parser/: ast.rs  mod.rs  validation.rs
domainstack/domainstack-derive/: Cargo.toml  README.md
domainstack/domainstack-derive/src/: json_schema.rs  lib.rs  schema.rs
domainstack/domainstack-derive/tests/: basic.rs  collections.rs  cross_field.rs  custom.rs  json_schema_derive.rs  nested.rs  schema_derive.rs  serde_integration.rs  tuple_and_enum.rs  validate_toschema_unified.rs
domainstack/domainstack-envelope/: Cargo.toml  README.md
domainstack/domainstack-envelope/src/: lib.rs
domainstack/domainstack-examples/: Cargo.toml  v2_basic.rs  v2_collections.rs  v2_custom.rs  v2_nested.rs  v3_error_envelope_basic.rs  v3_error_envelope_nested.rs  v4_builder_customization.rs  v5_cross_field_validation.rs
domainstack/domainstack-http/: Cargo.toml  README.md
domainstack/domainstack-http/src/: lib.rs
domainstack/domainstack-rocket/: Cargo.toml  README.md
domainstack/domainstack-rocket/src/: lib.rs
domainstack/domainstack-schema/: Cargo.toml  OPENAPI_CAPABILITIES.md  README.md
domainstack/domainstack-schema/examples/: auto_derive.rs  unified_validation_schema.rs  user_api.rs  v08_features.rs
domainstack/domainstack-schema/src/: json_schema.rs  lib.rs  openapi.rs  schema.rs  traits.rs
domainstack/domainstack-wasm/: .gitignore  Cargo.toml  README.md
domainstack/domainstack-wasm/src/: lib.rs
domainstack/domainstack/benches/: README.md  serde_validation.rs
domainstack/domainstack/docs/: ADVANCED_PATTERNS.md  ASYNC_VALIDATION.md  CLI_GUIDE.md  CODE_GENERATION.md  COLLECTION_VALIDATION.md  CONDITIONAL_VALIDATION.md  CORE_CONCEPTS.md  CROSS_FIELD_VALIDATION.md  DERIVE_MACRO.md  ERROR_HANDLING.md  HTTP_INTEGRATION.md  INSTALLATION.md  JSON_SCHEMA.md  MANUAL_VALIDATION.md  OPENAPI_SCHEMA.md  PATTERNS.md  PUBLISHING.md  README-STRATEGY.md  RULES.md  SERDE_BENCHMARK.md  SERDE_INTEGRATION.md  TYPE_STATE.md  WASM_VALIDATION.md  api-guide.md  architecture.md
domainstack/domainstack/examples/: age_primitive.rs  async_sqlite.rs  async_validation.rs  booking_aggregate.rs  email_primitive.rs  phantom_types.rs  serde_benchmark.rs  serde_validation.rs
domainstack/domainstack/src/: async_validate.rs  context.rs  error.rs  helpers.rs  lib.rs  path.rs  prelude.rs  rule.rs  typestate.rs  validate.rs  violation.rs
domainstack/domainstack/src/rules/: choice.rs  collection.rs  datetime.rs  mod.rs  numeric.rs  string.rs
domainstack/examples/: Cargo.toml  v2_basic.rs  v2_collections.rs  v2_custom.rs  v2_nested.rs  v3_error_envelope_basic.rs  v3_error_envelope_nested.rs  v4_builder_customization.rs  v5_cross_field_validation.rs
domainstack/examples-actix/: Cargo.toml  booking.rs
domainstack/examples-axum/: Cargo.toml  booking.rs
domainstack/examples-rocket/: Cargo.toml  booking.rs
domainstack/scripts/: coverage.sh
examples/: README.md
