[workspace]
members = ["domainstack", "domainstack-derive", "domainstack-envelope", "domainstack-http", "domainstack-axum", "domainstack-actix", "domainstack-examples", "examples-axum", "examples-actix", "domainstack-schema"]
resolver = "2"

[workspace.dependencies]
domainstack = { version = "0.4.0", path = "domainstack", default-features = false }
domainstack-derive = { version = "0.4.0", path = "domainstack-derive" }
domainstack-envelope = { version = "0.4.0", path = "domainstack-envelope" }
domainstack-http = { version = "0.4.0", path = "domainstack-http" }
domainstack-axum = { version = "0.4.0", path = "domainstack-axum" }
domainstack-actix = { version = "0.4.0", path = "domainstack-actix" }
domainstack-schema = { version = "0.8.0", path = "domainstack-schema" }
error-envelope = "0.2.1"
regex = "1.10"
once_cell = "1.20"
async-trait = "0.1"
smallvec = "1.13"
