[workspace]
members = ["domainstack", "domainstack-derive", "domainstack-envelope", "domainstack-http", "domainstack-axum", "domainstack-actix", "domainstack-rocket", "domainstack-examples", "examples-axum", "examples-actix", "examples-rocket", "domainstack-schema", "domainstack-cli", "domainstack-wasm"]
resolver = "2"

[workspace.dependencies]
domainstack = { version = "1.0.0", path = "domainstack", default-features = false }
domainstack-derive = { version = "1.0.0", path = "domainstack-derive" }
domainstack-envelope = { version = "1.0.0", path = "domainstack-envelope" }
domainstack-http = { version = "1.0.0", path = "domainstack-http" }
domainstack-axum = { version = "1.0.0", path = "domainstack-axum" }
domainstack-actix = { version = "1.0.0", path = "domainstack-actix" }
domainstack-rocket = { version = "1.0.0", path = "domainstack-rocket" }
domainstack-schema = { version = "1.0.0", path = "domainstack-schema" }
domainstack-wasm = { version = "1.0.0", path = "domainstack-wasm" }
error-envelope = "0.2.1"
regex = "1.10"
once_cell = "1.20"
async-trait = "0.1"
smallvec = "1.13"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
serde = { version = "1.0", features = ["derive"] }
