[workspace]
members = ["domainstack", "domainstack-derive", "domainstack-envelope", "domainstack-http", "domainstack-axum", "domainstack-actix", "domainstack-rocket", "domainstack-examples", "examples-axum", "examples-actix", "examples-rocket", "domainstack-schema", "domainstack-cli", "domainstack-wasm"]
resolver = "2"

[workspace.dependencies]
domainstack = { version = "1.0.0", default-features = false }
domainstack-derive = { version = "1.0.0" }
domainstack-envelope = { version = "1.0.0" }
domainstack-http = { version = "1.0.0" }
domainstack-axum = { version = "1.0.0" }
domainstack-actix = { version = "1.0.0" }
domainstack-rocket = { version = "1.0.0" }
domainstack-schema = { version = "1.0.0" }
domainstack-wasm = { version = "1.0.0" }
error-envelope = "0.2.1"
regex = "1.10"
once_cell = "1.20"
async-trait = "0.1"
smallvec = "1.13"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
serde = { version = "1.0", features = ["derive"] }

# Patch crates.io deps to use local paths during development
[patch.crates-io]
domainstack = { path = "domainstack" }
domainstack-derive = { path = "domainstack-derive" }
domainstack-envelope = { path = "domainstack-envelope" }
domainstack-http = { path = "domainstack-http" }
domainstack-axum = { path = "domainstack-axum" }
domainstack-actix = { path = "domainstack-actix" }
domainstack-rocket = { path = "domainstack-rocket" }
domainstack-schema = { path = "domainstack-schema" }
domainstack-wasm = { path = "domainstack-wasm" }
