[package]
name = "domain-model-derive"
version = "0.2.0"
edition = "2021"
rust-version = "1.65"
authors = ["Dayna Blackwell <blackwellsystems@protonmail.com>"]
license = "MIT"
description = "Derive macro for domain-model validation framework"
repository = "https://github.com/blackwell-systems/domain-model"
documentation = "https://docs.rs/domain-model-derive"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
trybuild = "1.0"
domain-model = { path = "../domain-model" }
