[package]
name = "domain-model"
version = "0.2.0"
edition = "2021"
rust-version = "1.65"
authors = ["Dayna Blackwell <blackwellsystems@protonmail.com>"]
license = "MIT"
description = "Domain validation framework for Rust services"
repository = "https://github.com/blackwell-systems/domain-model"
documentation = "https://docs.rs/domain-model"
keywords = ["validation", "domain", "ddd", "api", "web"]
categories = ["web-programming", "data-structures"]

[dependencies]
regex = { version = "1.10", optional = true }
domain-model-derive = { version = "0.2.0", path = "../domain-model-derive", optional = true }

[features]
default = ["std"]
std = []
email = ["regex"]
derive = ["domain-model-derive"]

[dev-dependencies]
