[package]
name = "domainstack-actix"
version = "0.4.0"
edition = "2021"
rust-version = "1.76"
license = "Apache-2.0"
authors = ["Dayna Blackwell <blackwellsystems@protonmail.com>"]
description = "Actix-web extractors and response implementations for domainstack validation framework"
repository = "https://github.com/blackwell-systems/domainstack"
documentation = "https://docs.rs/domainstack-actix"
keywords = ["validation", "actix", "http", "domain", "ddd"]
categories = ["web-programming", "web-programming::http-server"]

[dependencies]
domainstack = { workspace = true }
domainstack-http = { workspace = true }
domainstack-envelope = { workspace = true }
error-envelope = { workspace = true }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"

[dev-dependencies]
domainstack = { workspace = true, features = ["derive"] }
domainstack-derive = { workspace = true }
actix-rt = "2"
actix-test = "0.1"
