[package]
name = "domainstack-actix"
version = "1.0.0"
edition = "2021"
rust-version = "1.76"
license = "MIT OR Apache-2.0"
authors = ["Dayna Blackwell <blackwellsystems@protonmail.com>"]
description = "Actix-web extractors for domainstack: DomainJson<T> with automatic validation and structured error responses"
repository = "https://github.com/blackwell-systems/domainstack"
documentation = "https://docs.rs/domainstack-actix"
keywords = ["validation", "actix", "extractor", "api", "ddd"]
categories = ["web-programming", "web-programming::http-server"]

[dependencies]
domainstack = { version = "1.0.0", default-features = false }
domainstack-http = "1.0.0"
domainstack-envelope = "1.0.0"
error-envelope = "0.2.1"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"

[dev-dependencies]
domainstack = { version = "1.0.0", features = ["derive"] }
domainstack-derive = "1.0.0"
actix-rt = "2"
actix-test = "0.1"
