[package]
name = "domainstack-axum"
version = "0.4.0"
edition = "2021"
rust-version = "1.76"
license = "Apache-2.0"
authors = ["Dayna Blackwell <blackwellsystems@protonmail.com>"]
description = "Axum extractors and response implementations for domainstack validation framework"
repository = "https://github.com/blackwell-systems/domainstack"
documentation = "https://docs.rs/domainstack-axum"
keywords = ["validation", "axum", "http", "domain", "ddd"]
categories = ["web-programming", "web-programming::http-server"]

[dependencies]
domainstack = { workspace = true }
domainstack-http = { workspace = true }
domainstack-envelope = { workspace = true }
error-envelope = { workspace = true }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }

[dev-dependencies]
domainstack = { workspace = true, features = ["derive"] }
domainstack-derive = { workspace = true }
axum-test = "15"
