[package]
name = "domainstack-axum"
version = "0.4.0"
edition = "2021"
rust-version = "1.76"
license = "Apache-2.0"
authors = ["Dayna Blackwell <blackwellsystems@protonmail.com>"]
description = "Axum extractors for domainstack: DomainJson<T> with automatic validation and RFC 9457 error responses"
repository = "https://github.com/blackwell-systems/domainstack"
documentation = "https://docs.rs/domainstack-axum"
keywords = ["validation", "axum", "extractor", "api", "ddd"]
categories = ["web-programming", "web-programming::http-server"]

[dependencies]
domainstack = { workspace = true }
domainstack-http = { workspace = true }
domainstack-envelope = { workspace = true }
error-envelope = { workspace = true }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }

[dev-dependencies]
domainstack = { workspace = true, features = ["derive"] }
domainstack-derive = { workspace = true }
axum-test = "14"
