[package]
name = "domainstack-axum"
version = "1.0.0"
edition = "2021"
rust-version = "1.76"
license = "MIT OR Apache-2.0"
authors = ["Dayna Blackwell <blackwellsystems@protonmail.com>"]
description = "Axum extractors for domainstack: DomainJson<T> with automatic validation and structured error responses"
repository = "https://github.com/blackwell-systems/domainstack"
documentation = "https://docs.rs/domainstack-axum"
keywords = ["validation", "axum", "extractor", "api", "ddd"]
categories = ["web-programming", "web-programming::http-server"]

[dependencies]
domainstack = { version = "1.0.0", default-features = false }
domainstack-http = "1.0.0"
domainstack-envelope = "1.0.0"
error-envelope = "0.2.1"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }

[dev-dependencies]
domainstack = { version = "1.0.1", features = ["derive"] }
domainstack-derive = "1.0.0"
axum-test = "14"
