[package]
name = "domainstack-derive"
version = "1.0.0"
edition = "2021"
rust-version = "1.76"
authors = ["Dayna Blackwell <blackwellsystems@protonmail.com>"]
license = "Apache-2.0"
description = "Derive macros for domainstack: #[derive(Validate)] for domain-driven validation"
repository = "https://github.com/blackwell-systems/domainstack"
documentation = "https://docs.rs/domainstack-derive"
keywords = ["validation", "derive", "macro", "ddd", "dto"]
categories = ["development-tools::procedural-macro-helpers", "data-structures"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[features]
schema = []

[dev-dependencies]
trybuild = "1.0"
domainstack = { workspace = true, features = ["regex"] }
domainstack-schema = { workspace = true }
serde_json = "1.0"
