[package]
name = "domainstack-derive"
version = "1.1.1"
edition = "2021"
rust-version = "1.76"
authors = ["Dayna Blackwell <blackwellsystems@protonmail.com>"]
license = "MIT OR Apache-2.0"
description = "Derive macros for domainstack: #[derive(Validate, ToSchema, ToJsonSchema)] - validation + auto-generate OpenAPI/JSON Schema"
repository = "https://github.com/blackwell-systems/domainstack"
documentation = "https://docs.rs/domainstack-derive"
keywords = ["validation", "derive", "macro", "ddd", "dto"]
categories = ["development-tools::procedural-macro-helpers", "data-structures"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
schema = []
serde = ["dep:serde"]

[dev-dependencies]
trybuild = "1.0"
domainstack = { version = "1.0.1", features = ["regex"] }
domainstack-schema = "1.0.0"
serde_json = "1.0"
