[package]
name = "domainstack-envelope"
version = "1.0.0"
edition = "2021"
rust-version = "1.76"
license = "Apache-2.0"
authors = ["Dayna Blackwell <blackwellsystems@protonmail.com>"]
description = "Error envelope integration for domainstack: convert validation errors to RFC 9457 problem details"
repository = "https://github.com/blackwell-systems/domainstack"
documentation = "https://docs.rs/domainstack-envelope"
keywords = ["validation", "http", "api", "rfc9457", "errors"]
categories = ["web-programming", "web-programming::http-server"]

[dependencies]
domainstack = { workspace = true }
error-envelope = { workspace = true }
serde_json = "1"

[features]
default = []

[dev-dependencies]
domainstack = { workspace = true, features = ["derive"] }
domainstack-derive = { workspace = true }
