[package]
name = "domainstack-envelope"
version = "1.0.0"
edition = "2021"
rust-version = "1.76"
license = "MIT OR Apache-2.0"
authors = ["Dayna Blackwell <blackwellsystems@protonmail.com>"]
description = "Error envelope integration for domainstack: convert validation errors to structured HTTP error responses"
repository = "https://github.com/blackwell-systems/domainstack"
documentation = "https://docs.rs/domainstack-envelope"
keywords = ["validation", "http", "api", "errors", "envelope"]
categories = ["web-programming", "web-programming::http-server"]

[dependencies]
domainstack = { version = "1.0.0", default-features = false }
error-envelope = "0.2.1"
serde_json = "1"

[features]
default = []

[dev-dependencies]
domainstack = { version = "1.0.0", features = ["derive"] }
domainstack-derive = "1.0.0"
