[package]
name = "domainstack-http"
version = "1.0.0"
edition = "2021"
rust-version = "1.76"
license = "Apache-2.0"
authors = ["Dayna Blackwell <blackwellsystems@protonmail.com>"]
description = "Framework-agnostic HTTP helpers for domainstack: boundary validation for web APIs"
repository = "https://github.com/blackwell-systems/domainstack"
documentation = "https://docs.rs/domainstack-http"
keywords = ["validation", "http", "api", "boundary", "ddd"]
categories = ["web-programming", "web-programming::http-server"]

[dependencies]
domainstack = { workspace = true }
domainstack-envelope = { workspace = true }
error-envelope = { workspace = true }

[dev-dependencies]
domainstack = { workspace = true, features = ["derive"] }
domainstack-derive = { workspace = true }
