[package]
name = "domainstack-http"
version = "1.0.0"
edition = "2021"
rust-version = "1.76"
license = "MIT OR Apache-2.0"
authors = ["Dayna Blackwell <blackwellsystems@protonmail.com>"]
description = "Framework-agnostic HTTP helpers for domainstack: boundary validation for web APIs"
repository = "https://github.com/blackwell-systems/domainstack"
documentation = "https://docs.rs/domainstack-http"
keywords = ["validation", "http", "api", "boundary", "ddd"]
categories = ["web-programming", "web-programming::http-server"]

[dependencies]
domainstack = { version = "1.0.0", default-features = false }
domainstack-envelope = "1.0.0"
error-envelope = "0.2.1"

[dev-dependencies]
domainstack = { version = "1.0.0", features = ["derive"] }
domainstack-derive = "1.0.0"
