[package]
name = "domainstack-schema"
version = "1.0.0"
edition = "2021"
rust-version = "1.76"
authors = ["Dayna Blackwell <blackwellsystems@protonmail.com>"]
license = "Apache-2.0"
description = "OpenAPI schema generation for domainstack validation types"
repository = "https://github.com/blackwell-systems/domainstack"
documentation = "https://docs.rs/domainstack-schema"
keywords = ["validation", "openapi", "schema", "api", "documentation"]
categories = ["web-programming", "api-bindings"]

[features]
yaml = ["dep:serde_yaml"]

[dependencies]
domainstack = { workspace = true, default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { version = "0.9", optional = true }

[dev-dependencies]
domainstack = { workspace = true, features = ["derive", "regex"] }
domainstack-derive = { workspace = true }
