[package]
name = "domainstack-schema"
version = "1.0.0"
edition = "2021"
rust-version = "1.76"
authors = ["Dayna Blackwell <blackwellsystems@protonmail.com>"]
license = "MIT OR Apache-2.0"
description = "OpenAPI schema generation for domainstack validation types"
repository = "https://github.com/blackwell-systems/domainstack"
documentation = "https://docs.rs/domainstack-schema"
keywords = ["validation", "openapi", "schema", "api", "documentation"]
categories = ["web-programming", "api-bindings"]

[features]
yaml = ["dep:serde_yaml"]

[dependencies]
domainstack = { version = "1.0.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { version = "0.9", optional = true }

[dev-dependencies]
domainstack = { version = "1.0.1", features = ["derive", "regex"] }
domainstack-derive = "1.0.0"
