[package]
name = "domainstack"
version = "0.4.0"
edition = "2021"
rust-version = "1.76"
authors = ["Dayna Blackwell <blackwellsystems@protonmail.com>"]
license = "Apache-2.0"
description = "Domain-driven validation with composable rules and structured field-level errors. Framework adapters for Axum and Actix-web."
repository = "https://github.com/blackwell-systems/domainstack"
documentation = "https://docs.rs/domainstack"
keywords = ["validation", "domain", "ddd", "dto", "api"]
categories = ["web-programming", "data-structures"]

[dependencies]
regex = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
domainstack-derive = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }

[features]
default = ["std"]
std = []
regex = ["dep:regex", "dep:once_cell"]
derive = ["domainstack-derive"]
async = ["dep:async-trait"]

[[example]]
name = "booking_aggregate"
required-features = ["regex"]

[[example]]
name = "email_primitive"
required-features = ["regex"]

[[example]]
name = "async_validation"
required-features = ["async"]

[[example]]
name = "async_sqlite"
required-features = ["async"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
