[package]
name = "domainstack"
version = "0.4.0"
edition = "2021"
rust-version = "1.76"
authors = ["Dayna Blackwell <blackwellsystems@protonmail.com>"]
license = "Apache-2.0"
description = "Domain-driven validation with composable rules and structured field-level errors. Framework adapters for Axum and Actix-web."
repository = "https://github.com/blackwell-systems/domainstack"
documentation = "https://docs.rs/domainstack"
keywords = ["validation", "domain", "ddd", "dto", "api"]
categories = ["web-programming", "data-structures"]

[dependencies]
smallvec = { workspace = true }
regex = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
domainstack-derive = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }

[features]
default = ["std"]
std = []
regex = ["dep:regex", "dep:once_cell"]
derive = ["domainstack-derive"]
async = ["dep:async-trait"]
chrono = ["dep:chrono"]

[[example]]
name = "booking_aggregate"
required-features = ["regex"]

[[example]]
name = "email_primitive"
required-features = ["regex"]

[[example]]
name = "async_validation"
required-features = ["async"]

[[example]]
name = "async_sqlite"
required-features = ["async"]

[[example]]
name = "phantom_types"
required-features = ["regex"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
# Disable default features to avoid pulling in unnecessary database drivers (mysql, postgres)
# which have vulnerable transitive dependencies (rsa crate in mysql driver)
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
# Pin dependencies to maintain MSRV compatibility (Rust 1.76)
home = "=0.5.9"     # v0.5.12+ requires edition2024
crc = "=3.2.1"      # v3.4.0+ requires Rust 1.83+
