[package]
name = "domainstack-examples-rocket"
version = "0.4.0"
edition = "2021"
rust-version = "1.76"
publish = false

[[example]]
name = "booking-rocket"
path = "booking.rs"

[dependencies]
domainstack = { workspace = true, features = ["derive", "regex"] }
domainstack-rocket = { workspace = true }
domainstack-envelope = { workspace = true }
error-envelope = { workspace = true }
rocket = { version = "0.5", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.0", features = ["v4", "serde"] }
