[package]
name = "domainstack-examples"
version = "0.3.0"
edition = "2021"
publish = false

[dependencies]
domainstack = { path = "../domainstack", features = ["derive"] }
domainstack-derive = { path = "../domainstack-derive" }
domainstack-envelope = { path = "../domainstack-envelope" }
serde_json = "1"

[[example]]
name = "v2_basic"
path = "v2_basic.rs"

[[example]]
name = "v2_nested"
path = "v2_nested.rs"

[[example]]
name = "v2_collections"
path = "v2_collections.rs"

[[example]]
name = "v2_custom"
path = "v2_custom.rs"

[[example]]
name = "v3_error_envelope_basic"
path = "v3_error_envelope_basic.rs"

[[example]]
name = "v3_error_envelope_nested"
path = "v3_error_envelope_nested.rs"

[[example]]
name = "v4_builder_customization"
path = "v4_builder_customization.rs"
